fix: align the card in tutorial page with the left of the browser

--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -8,6 +8,7 @@ body {
 	font-family: "Helvetica Neue", Helvetica, "PingFang TC", "微軟正黑體", arial,
 		"Microsoft JhengHei", sans-serif;
 	color: #ffffff;
+	height: auto;
 }
 button {
 	background: inherit;
